# SquarelineToEsphome

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt  squareline-to-esphome.py
squareline_to_esphome/: __main__.py  action_handlers.py  yaml_utils.py
tests/: README.md  __init__.py  base.yaml  conftest.py  test_conversion.py  test_esphome_compilation.py  test_images.py  test_yaml_validation.py  utils.py
tests/3d_printer/: 3d_printer.sll
tests/projects/3d_printer/: 3d_printer.spj
tests/projects/actions/: actions.sll  actions.spj  actions_events.py  project.info
